--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.2",
+    "react-native-elements": "^1.0.0-beta5",
     "react-native-ionicons": "^0.2.1",
     "react-native-textinput-effects": "^0.4.2",
+    "react-native-vector-icons": "^4.6.0",
     "react-native-youtube": "^1.1.0",
     "react-navigation": "^1.5.11",
     "react-navigation-slide-from-right-transition": "^1.0.4"
